--- a/portfolio/css/app.css
+++ b/portfolio/css/app.css
@@ -1,4 +1,4 @@
-body { padding-top: 50px; }
+/* body { padding-top: 50px; } */
 
 .navbar-brand {
 	font-size: 2em;
@@ -22,6 +22,10 @@ body { padding-top: 50px; }
 
 .mt-margin-top {
 	margin-top: 100px;
+}
+
+.mt-padding-top {
+	padding-top: 30px;
 }
 
 .bold {
