Added a new style for Nav Next to adjust the margin top to look better on mobile device.  Fixed some spelling errors on the services page

--- a/portfolio/www/assets/css/app.css
+++ b/portfolio/www/assets/css/app.css
@@ -47,12 +47,8 @@ html, body {
 	margin: 30px auto;
 }
 
-.top-nav-row {
-  	
-}
-
 .mt-top-row-home-white {
-	margin-top: 250px;
+	margin-top: 150px;
 	text-align: center;
 	color: white;
 }
@@ -129,6 +125,12 @@ html, body {
 }
 
 .mt-sub-head-white p {
+	color: white;
+}
+
+.mt-nav-next-white {
+	margin-top: 50px;
+	text-align: center;
 	color: white;
 }
 
