Update hover thumb text color

--- a/portfolio/www/assets/css/app.css
+++ b/portfolio/www/assets/css/app.css
@@ -200,7 +200,7 @@ html, body {
 
 .mt-portfolio-thumb:hover h4 {
 	background-color: white !important;
-	color: black !important;
+	color: #13456C !important;
 }
 
 
