Tweaked form send message button styling

--- a/portfolio/www/assets/css/app.css
+++ b/portfolio/www/assets/css/app.css
@@ -247,6 +247,10 @@ html, body {
 	font-size: 125%;
 }
 
+.mt-fa-button {
+	color: #13456C;
+}
+
 
 /******************************/
 /*** TOP NAV SCROLL DOWN/UP ***/
