--- a/quotemachine/www/css/app.css
+++ b/quotemachine/www/css/app.css
@@ -1,15 +1,29 @@
-/**************************/
-/*** FONTS ***/
-/**************************/
+/*****************/
+/*** WEB FONTS ***/
+/*****************/
 
 @font-face {
-    font-family: "My Ring Bearer";
-    src: url("../fonts/ringbearer.ttf");
+    font-family: 'ringbearermedium';
+    src: url('../fonts/ringbearer-webfont.eot');
+    src: url('../fonts/ringbearer-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/ringbearer-webfont.woff2') format('woff2'),
+         url('../fonts/ringbearer-webfont.woff') format('woff'),
+         url('../fonts/ringbearer-webfont.ttf') format('truetype'),
+         url('../fonts/ringbearer-webfont.svg#ringbearermedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: "My Aniron";
-    src: url("../fonts/aniron.ttf");
+    font-family: 'anironregular';
+    src: url('../fonts/aniron-webfont.eot');
+    src: url('../fonts/aniron-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/aniron-webfont.woff2') format('woff2'),
+         url('../fonts/aniron-webfont.woff') format('woff'),
+         url('../fonts/aniron-webfont.ttf') format('truetype'),
+         url('../fonts/aniron-webfont.svg#anironregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /**************************/
@@ -26,7 +40,7 @@ html, body {
 }
 
 .mt-quote-content-row {
-   padding-top: 40px;
+   padding-top: 60px;
 }
 
 .mt-img-col {
@@ -52,18 +66,18 @@ html, body {
 }
 
 #quoteText {
-   font-family: "My Aniron";
+   font-family: "anironregular";
    font-size: 1.3em;
    color: #53502B;
 }
 
 h1 {
-   font-family: "My Ring Bearer";
+   font-family: "ringbearermedium";
    color: #7D4420;
 }
 
 .lead {
-   font-family: "My Ring Bearer";
+   font-family: "ringbearermedium";
    padding-top: 20px;
    color: #648399;
 }
@@ -71,7 +85,7 @@ h1 {
 .btn {
    color: #DDD9D1;
    background-color: #7D4420 !important;
-   font-family: "My Ring Bearer";
+   font-family: "ringbearermedium";
    font-size: 1.75em;
    width: 160px;
    height: 60px;
