--- a/portfolio/www/assets/css/app.css
+++ b/portfolio/www/assets/css/app.css
@@ -114,16 +114,25 @@ h1 {
 .mt-top-container-home {
 	background-image:
 		linear-gradient(
-          rgba(0, 0, 0, 0.4),
-          rgba(0, 0, 0, 0.8)
+          rgba(0, 0, 0, 0.3),
+          rgba(0, 0, 0, 0.3)
           ),
-		url("../images/background-home.jpg");
+		url("../images/background-2-home.jpeg");
 	width: 100%;
 	background-size: cover;
 }
 
-.mt-sub-head-white p {
+.mt-sub-head-white {
 	color: white;
+}
+
+.mt-sub-head-white a {
+	color: white;
+}
+
+.mt-sub-head-white a:hover {
+	text-decoration: none;
+	color: #B0D1FB;
 }
 
 .mt-nav-next-white {
@@ -152,7 +161,7 @@ h1 {
 .mt-service-thumb {
 	background-color: #F5F5F5;
 	border-color: #13456C;
-	height: 225px;
+	height: 280px;
 }
 
 .mt-service-thumb-text {
@@ -160,7 +169,7 @@ h1 {
 	color: #777777 !important;
 }
 
-.fa-code, .fa-cloud, .fa-puzzle-piece {
+.fa-code, .fa-search, .fa-cloud, .fa-puzzle-piece {
 	color: #13456C !important;
 }
 
