--- a/portfolio/www/assets/css/app.css
+++ b/portfolio/www/assets/css/app.css
@@ -46,6 +46,13 @@ h1 {
 	margin: 30px auto;
 }
 
+.mt-block-line-thumb {
+	background: rgba(33, 33, 33, 0.3);
+	width: 100px;
+	height: 1px;
+	margin: 30px auto;
+}
+
 .mt-top-row-white {
 	margin-top: 100px;
 	text-align: center;
@@ -122,8 +129,8 @@ h1 {
 	text-align: center;
    /*background-color:rgba(206, 199, 189, 0.9);*/
    background: linear-gradient(
-          rgba(206, 199, 189, 0.9),
-          rgba(206, 199, 189, 0.9)
+          rgba(206, 199, 189, 0.8),
+          rgba(206, 199, 189, 0.8)
           );
 }
 
@@ -177,7 +184,7 @@ h1 {
 .mt-service-thumb {
 	background-color: #d8c9be;
 	border-color: #7f6350;
-	height: 325px;
+	height: 360px;
    padding-top: 20px;
 }
 
