--- a/portfolio/www/assets/css/app.css
+++ b/portfolio/www/assets/css/app.css
@@ -11,6 +11,10 @@
 	font-size: 2em;
 }
 
+/*.navbar-default {
+   background-color: #bcb5a6;
+}*/
+
 .row {
 	/* border :3px solid blue; */
 }
@@ -117,7 +121,7 @@ h1 {
 	background-image:
 		linear-gradient(
           rgba(222, 222, 222, 0.9),
-          rgba(222, 222, 222, 0.5)
+          rgba(222, 222, 222, 0.7)
           ),
 		url("../images/background-3-home.png");
    /*background-attachment: fixed; THIS DOES NOT WORK ON MOBILE IPHONE FOR SOME REASON */
@@ -154,6 +158,10 @@ h1 {
    font-weight: bold;
 }
 
+.mt-top-row-home h1 {
+   color: #bf3939;
+}
+
 .mt-nav-next-white {
 	margin-top: 50px;
 	text-align: center;
@@ -162,7 +170,7 @@ h1 {
 
 .mt-home-header-text {
    padding-bottom: 20px;
-   color: #212121;
+   color: #bf3939;
 }
 
 .mt-home-lead-text {
@@ -192,7 +200,7 @@ h1 {
 	/*background-color: #d8c9be;
 	border-color: #7f6350;*/
 	height: 300px;
-   padding-top: 20px;*/
+   padding-top: 20px;
 }
 
 .mt-service-thumb-text {
@@ -210,7 +218,7 @@ h1 {
 }
 
 .mt-service-header-text {
-   color: #212121;
+   color: #bf3939;
 }
 
 .mt-service-lead-text {
@@ -258,7 +266,7 @@ h1 {
 }
 
 .mt-portfolio-header-text {
-   color: #212121;
+   color: #bf3939;
 }
 
 .mt-portfolio-lead-text {
@@ -324,7 +332,7 @@ h1 {
 }
 
 .mt-connect-header-text {
-   color: #212121;
+   color: #bf3939;
 }
 
 .mt-connect-lead-text {
@@ -341,7 +349,7 @@ h1 {
 	height: 50px;
 	border-width: 2px;
 	border-style: solid;
-	border-color: #212121;
+	border-color: #bf3939;
 	border-radius: 50%;
 	padding-top: 4px;
    margin: auto;
@@ -349,7 +357,7 @@ h1 {
 
 .mt-scroll-down-link a {
 	font-size: 200%;
-	color: #212121;
+	color: #bf3939;
 }
 
 .mt-scroll-down-link:hover {
@@ -365,7 +373,7 @@ h1 {
 	height: 50px;
 	border-width: 2px;
 	border-style: solid;
-	border-color: #212121;
+	border-color: #bf3939;
 	border-radius: 50%;
 	padding-top: 3px;
 	margin: auto;
@@ -379,7 +387,7 @@ h1 {
 
 .mt-scroll-up-link a {
 	font-size: 200%;
-	color: #212121;
+	color: #bf3939;
 }
 
 .mt-scroll-up-link:hover {
